# Genesis-1M

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.py  run_simulation.py  snapshot.html  visualize.py  visualize_html.py  visualize_terminal.py
config/: defaults.yaml  hpc.yaml
scripts/: analyze_events.py  benchmark.py  deploy_cluster.sh
scripts/hpc/: README.md  interactive.sh  run_benchmark.sbatch  run_distributed.py  run_multinode.sbatch  run_simulation.sbatch  setup_env.sh  sync_to_hpc.sh
src/: __init__.py  config.py
src/agents/: __init__.py  tier3.py
src/core/: __init__.py  checkpoint.py  distributed.py  events.py  simulation.py  simulation_fast.py  simulation_llm.py  state.py
src/inference/: __init__.py  promotion.py  prompts.py  tier1_processor.py  vllm_backend.py
src/memory/: __init__.py  embeddings.py  manager.py  schema.py  store.py
src/spatial/: __init__.py  hash_grid.py
src/world/: __init__.py  resources.py  terrain.py
tests/: __init__.py  test_fsm.py  test_inference.py  test_integration.py  test_memory.py  test_spatial.py  test_state.py
